# ais-shader

./: .gitignore  README.md  compile_and_test.sh  config.toml  pyproject.toml  setup.py  submit_analysis.sh  submit_benchmark.sh
docs/: architecture.md  crossing_methodology.md  pipeline.d2
docs/images/: generate_hilbert_plot.py  generate_us_hilbert_map.py
examples/: postprocess_intersection.py
qgis/: bin-symbology.qml  intersection-demo.qgz  symbology.qml
resources/: vessel_groups.json  vessel_groups_aisdk.json
scripts/: report_overview.py
scripts/rws/: run_pipeline.sh
scripts/snellius/: generate_epochs.sh  generate_lines.sh  submit_benchmark.sh  submit_generate_map.sh  submit_trajectorize.sh
snellius/: generate_epochs.sh  generate_lines.sh  process_rws.sh  submit_analysis.sh
src/ais_shader/: _cgal_hull.cpp  analysis.py  archive.py  benchmark.py  cli.py  data_loader.py  events.py  generate_bin_segments.py  postprocessing.py  preprocessing.py  renderer.py
src/ais_shader/moving_dask/: __init__.py  features.py  trajectory.py
tests/: benchmark.py  run_benchmark.py  test_analysis.py  test_antialiasing_invariants.py  test_cli.py  test_csv.py  test_encrypted_zip.py  test_events.py  test_fail_fast_preprocessing.py  test_flatten_row_profiles.py  test_hilbert.py  test_hive_partitioning.py  test_line_width_consistency.py  test_moving_dask.py  test_ndjson.py  test_outlier_filtering_tz.py  test_pyramid_weighted_mean.py  test_sog_cleaning.py  test_tile_edge_lines.py
