[project]
name = "ais-shader"
version = "0.4.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bokeh>=3.8.1",
    "click>=8.3.1",
    "colorcet>=3.1.0",
    "dask[distributed]>=2025.11.0",
    "dask-geopandas>=0.5.0",
    "datashader>=0.18.2",
    "geoviews>=1.15.0",
    "holoviews>=1.22.0",
    "hvplot>=0.12.1",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "tqdm>=4.67.1",
    "cartopy>=0.25.0",
    "rioxarray>=0.20.0",
    "morecantile>=7.0.0",
    "rio-cogeo>=7.0.0",
    "netcdf4>=1.7.3",
    "zarr>=2.18.0",
    "cmcrameri>=1.9",
    "mlflow>=2.11.0",
    "pyzipper>=0.3.6",
    "python-dotenv>=1.0.0",
    "tabulate>=0.10.0",
]

[project.optional-dependencies]
cgal = [
    "pybind11>=3.0.4",
]

[project.scripts]
ais-shader = "ais_shader.cli:cli"

[build-system]
requires = ["setuptools>=61.0.0", "pybind11>=2.10.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true

[tool.uv.sources]
datashader = { git = "https://github.com/SiggyF/datashader", branch = "fix-geopandas-line-invariance" }

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "psutil",
]

[tool.pytest.ini_options]
filterwarnings = [
    # zarr's own informational notice about its format-spec status, not
    # something this project's code can avoid while using consolidated=True.
    "ignore:.*[Cc]onsolidated metadata.*:UserWarning",
]
